--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,9 +10,10 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '11' 
+          distribution: 'adopt' 
       - id: get-project
         name: Get project name
         run: echo "::set-output name=PROJECT::$(cat project-to-build)"
@@ -28,5 +29,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: my-build-apk
-          path: ./**/*.apk
-
+          if-no-files-found: error 
+          path: '**/*.apk'
